test/syntaxerror/fail.js
#$%$^TYWREGT#$W%F@  ###DXRAWCERE FEWV%@QT#$ERSDFGHsftye5rysfg

assert))(4w3qawe$W%435, message), assert.ok))(4w3qawe$W%435, message)
